--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Longbq.GitHub.io</h1>
+      <h1 class="project-name">Bùi Quang Long CNTT09-02</h1>
       <h2 class="project-tagline">Hello everybody</h2>
       <a href="https://github.com/LongBQ1102/longbq.github.io" class="btn">View on GitHub</a>
       <a href="https://github.com/LongBQ1102/longbq.github.io/zipball/master" class="btn">Download .zip</a>
@@ -22,13 +22,18 @@
       <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Chào mừng các bạn đến với web thời trang.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>- Xã hội hiện đại gắn liền với sự phát triển của thời trang. Trong sự đa dạng về chủng loại, mẫu mã của các sản phẩm thời trang trên thị trường hiện nay, người tiêu dùng có thể tuỳ thích lựa chọn từ những sản phẩm cao cấp cho đến những sản phẩm mang phong cách bình dân cho nhiều người
 
+- Cùng đi lên với sự phát triển của thời trang, đi từng bước từ nhỏ đến lớn, Năm 1998 thời trang  Hạnh thành lập cơ sở thiết kế thời trang Hạnh, chuyên về thời trang nữ, qua quá trình phát triển ngày một vững vàng, năm 2003 thành lập công ty TNHH thời trang Hạnh, xuất hiện trên thị trường Việt Nam thời trang Hạnh được nhiều người tiêu dùng biết đến với những bộ trang phục dạo phố, trang phục công sở trẻ trung mà không kém phần thanh lịch.
+- Với mẫu mã đa dạng, phong phú Thời Trang Hạnh luôn được đông đảo khách hàng tín nhiệm sử dụng sản phẩm với sự hài lòng cao nhất, cùng đội ngũ thiết kế trẻ trung, nhiệt huyết, đam mê nghề luôn mang đến những ý tưởng sản phẩm lạ và đẹp mắt kết hợp hài hoà giữa yếu tố mỹ thuật, kỹ thuật, mỗi sản phẩm luôn có sự hoài hoà về màu sắc, đồng nhất về chất liệu, phóng khoán về đường nét, tạo dáng đẹp cho cơ thể đồng thời giá cả phù hợp số đông người tiêu dùng
+
+-   Bên cạnh thế mạnh chủ lực là thời trang nữ, từ trẻ đến trung niên, lịch sự và duyên dáng, thời trang Hạnh còn đưa ra thị trường mẫu đồng phục dành cho học sinh nữ tại các trường như Nguyễn Thị Minh Khai, Trường Gia Định, Trường Ngô Sĩ Liên, Nguyễn Trãi…. Để đáp ứng nhu đa dạng cho khách hàng của mọi lứa tuổi Thời Trang Hạnh còn nghiên cứu về cơ thể học để có hệ thồng cỡ số hoàn chỉnh phù hợp với vóc dáng trung bình đến người có vóc dáng to ( big size ). Ngoài hệ thống phân phối chính là siêu thị Coop Mart, Vinatex . . .Thời Trang Hạnh từng bước phát triển mạng lưới cửa hàng ở các Trung tâm thương mại ở các tỉnh thành trên cả nước như Aeon, Lotte Mart, Big C, Maximart, Vinatex...
+
+Cùng sự gắn bó không ngừng của tập thể cán bộ nhân viên, công ty luôn đoàn kết, sáng tạo hăng say lao động tạo ra các sản phẩm luôn được tin dùng, đặc biệt công ty Thời Trang Hạnh luôn được người tiêu dùng tin tưởng và bình chọn là Hàng Việt Nam chất lượng cao nhiều năm . . . giải thưởng này không chỉ là nguồn động viên tinh thần cho tập thể công nhân viên công ty trong quá trình phát triển đi lên mà còn góp phần khẳng định uy tín thương hiệu thời trang Hạnh trên thị trường thời trang Việt Nam.</p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mẫu thết kế</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
+<p>Sắc màu rực rỡ, tươi sáng là chủ đạo, phối cùng các màu trắng, đỏ tươi, xanh dương hay xám, đen...BST Nắng tháng năm của Thời Hạnh với những kiểu áo, váy, quần tây lịch sự cho chị em khi tới văn phòng hay xuống phố. Các chất liệu kaki thun, cotton, xô, linen mang lại sự thoải mái cho người mặc. Quần tay...</p>
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
