--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="chào-mừng-đến-với-chúng-tôi" class="anchor" href="#ch%C3%A0o-m%E1%BB%ABng-%C4%91%E1%BA%BFn-v%E1%BB%9Bi-ch%C3%BAng-t%C3%B4i" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Chào mừng đến với chúng tôi.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Trang thông tin dành cho tín đồ công nghệ.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
