Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a id="trang-thông-tin-dành-cho-tín-đồ-công-nghệ-1" class="anchor" href="#trang-th%C3%B4ng-tin-d%C3%A0nh-cho-t%C3%ADn-%C4%91%E1%BB%93-c%C3%B4ng-ngh%E1%BB%87-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trang thông tin dành cho tín đồ công nghệ.</h2>
 </h3>
 
-<p>Chào mừng đến với Khoa Công nghệ thông tin Đại học Đại Nam.<br></p>
+<p>Chào mừng đến với Khoa Công nghệ thông tin <a href="http://dainam.edu.vn/" title="Click ">Đại học Đại Nam</a>.<br></p>
 
 <h3>
 <a id="công-nghệ-thông-tin-là-gì" class="anchor" href="#c%C3%B4ng-ngh%E1%BB%87-th%C3%B4ng-tin-l%C3%A0-g%C3%AC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Công nghệ thông tin là gì?</h3>
@@ -38,7 +38,8 @@ Công nghệ thông tin hầu như được sở dụng phổ biến trong lĩnh
 Đi sâu vào các chuyên ngành này, các bạn sẽ có cơ hội tiếp cận những kiến thức liên quan đến nghiên cứu phát triển, gia công hay ứng dụng hệ thống phần mềm; kiến thức về thiết kế, xây dựng, cài đặt, vận hành và bảo trì các thành phần phần cứng, phần mềm của hệ thống máy tính và các hệ thống thiết bị dựa trên máy tính; kiến thức về bảo mật hệ thống thông tin....Ra trường đảm bảo khả năng thực hành nghề nghiệp và đáp ứng yêu cầu công việc ở từng lĩnh vực cụ thể.<br>
 Bên cạnh đó, tại những trường đại học đào tạo ngành Công nghệ thông tin uy tín như trường Đại học Bách khoa , Đại học Đại Nam, Đại học Kinh tế Tài chính, Đại học Công nghệ (HUTECH),... sinh viên còn được chú trọng phát triển kiến thức chuyên môn và những kỹ năng cần thiết cho nghề nghiệp về sau: kỹ năng làm việc theo nhóm, kỹ năng giao tiếp, kỹ năng lập kế hoạch,…Đặc biệt, tại DNU, sinh viên còn được tăng cường trang bị ngoại ngữ, các kỹ năng nghề nghiệp, tham gia quá trình thực tập thực tế tại các doanh nghiệp đối tác của trường.<br>
 Với nền móng kiến thức, kỹ sư hay cử nhân công nghệ thông tin hoàn toàn tự tin hòa nhập vào môi trường làm việc hiện đại, năng động, góp phần vào sự phát triển của nền công nghệ nước nhà.<br>
-Từ những thông tin bài viết vừa cung cấp, tin chắc rằng các bạn đã có thể trả lời cho câu hỏi “Ngành Công nghệ thông tin là gì? Học những gì?”. Đây sẽ là tiền đề quan trọng để các bạn để có những lựa chọn đúng đắn, phù hợp cho tương lai của mình.</p>
+Từ những thông tin bài viết vừa cung cấp, tin chắc rằng các bạn đã có thể trả lời cho câu hỏi “Ngành Công nghệ thông tin là gì? Học những gì?”. Đây sẽ là tiền đề quan trọng để các bạn để có những lựa chọn đúng đắn, phù hợp cho tương lai của mình.<br>
+<a href="http://my.metadata.vn/share/proxy/alfresco-noauth/api/internal/shared/node/3l_ndinXSg6oYk5NnZCybA/content/Sach%20tham%20khao.zip" title="Click">Tài Liệu Học Tập Chuyên Ngành</a></p>
 
 <h3>
 <a id="học-ngành-công-nghệ-thông-tin-yêu-cầu-những-gì" class="anchor" href="#h%E1%BB%8Dc-ng%C3%A0nh-c%C3%B4ng-ngh%E1%BB%87-th%C3%B4ng-tin-y%C3%AAu-c%E1%BA%A7u-nh%E1%BB%AFng-g%C3%AC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Học ngành Công nghệ thông tin yêu cầu những gì?</h3>
