Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <a id="trang-thông-tin-dành-cho-tín-đồ-công-nghệ-1" class="anchor" href="#trang-th%C3%B4ng-tin-d%C3%A0nh-cho-t%C3%ADn-%C4%91%E1%BB%93-c%C3%B4ng-ngh%E1%BB%87-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trang thông tin dành cho tín đồ công nghệ.</h2>
 </h3>
 
-<p>Chào mừng đến với Khoa Công nghệ thông tin <a href="http://dainam.edu.vn/" title="Click ">Đại học Đại Nam</a>.<br></p>
+<p>Chào mừng đến với Khoa Công nghệ thông tin <a href="http://dainam.edu.vn/khoa-cong-nghe-thong-tin-74324.htm" title="Click ">Đại học Đại Nam</a>.<br></p>
 
 <h3>
 <a id="công-nghệ-thông-tin-là-gì" class="anchor" href="#c%C3%B4ng-ngh%E1%BB%87-th%C3%B4ng-tin-l%C3%A0-g%C3%AC" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Công nghệ thông tin là gì?</h3>
